--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,5 @@
 /*desc*/
-@media (min-width: 1158px) {
-    .container {
-        max-width: 1158px;
-        margin: 0 auto;
-        padding-left: 16px;
-        padding-right: 16px;
-    }
-
-    .contact-us-title {
-    }
-    .contact-us-img {
-    }
-    .contact-us-wrapper {
-    }
-    .contact-us-form {
-    }
-    .form-text {
-    }
-    .form-label {
-    }
-    .label {
-    }
-    .form-input {
-    }
-    .form-comment {
-    }
-    .input-comment {
-    }
-    .send-button {
-    }
-}
-
-/*tablet*/
-
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1280px) {
     *,
     *::before,
     *::after {
@@ -46,8 +12,8 @@
     }
 
     .container {
-        max-width: 768px;
-        padding: 0 32px;
+        max-width: 1280px;
+        padding: 0 65px;
     }
 
     .contact-us-title {
@@ -64,13 +30,14 @@
     }
 
     .contact-us-wrapper {
-        padding: 50px 122px;
+        padding: 0 65px;
         border-radius: 50px;
         width: 100%;
         background-color: #f3f3f3;
         box-sizing: border-box;
-        margin-bottom: 40px;
+        margin-bottom: 100px;
     }
+
     .contact-us-form {
         display: flex;
         align-items: flex-start;
@@ -159,6 +126,145 @@
     .send-button:focus {
         background-color: #1f3cd4;
     }
+
+    .wrapper-image {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: row;
+        gap: 40px;
+        width: 100%;
+    }
+}
+
+/*tablet*/
+
+@media only screen and (min-width: 768px) {
+    *,
+    *::before,
+    *::after {
+      box-sizing: border-box;
+    }
+
+    body {
+        background-color: #FBFBFB;
+        font-family: "Times New Roman", Times, serif;
+    }
+
+    .container {
+        max-width: 768px;
+        padding: 0 32px;
+    }
+
+    .contact-us-title {
+        font-weight: 600;
+        font-size: 48px;
+        line-height: 0.9;
+        letter-spacing: -0.02em;
+        color: #0c0c0c;
+    }
+
+    .contact-us-img {
+        width: 100%;
+        height: auto;
+    }
+
+    .contact-us-wrapper {
+        padding: 50px 122px;
+        border-radius: 50px;
+        width: 100%;
+        background-color: #f3f3f3;
+        box-sizing: border-box;
+        margin-bottom: 40px;
+    }
+
+    .contact-us-form {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: column;
+        gap: 32px;
+        width: 100%;
+    }
+
+    .form-text {
+        max-width: 100%;
+    }
+
+    .all-inputs {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: column;
+        gap: 18px;
+        width: 100%;
+    }
+
+    .form-label {
+        width: 100%;
+    }
+
+    .label {
+        position: relative;
+    }
+
+    .form-input {
+        width: 100%;
+        height: 52px;
+        border: 1px solid rgba(12, 12, 12, 0.15);
+        border-radius: 12px;
+        padding: 16px 16px;
+        background-color: transparent;
+    }
+
+    input::placeholder, textarea::placeholder {
+        font-family: "Times New Roman", Times, serif;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.3;
+        color: #0c0c0c;
+    }
+
+    .form-input:focus, .form-input:hover {
+        border-color: 1px solid #3350e9;
+    }
+
+    .form-comment {
+        position: relative;
+        width: 100%;
+    }
+
+    .input-comment {
+        padding: 16px 16px;
+        width: 100%;
+        border-radius: 12px;
+        background-color: transparent;
+        border: 1px solid rgba(12, 12, 12, 0.15);
+    }
+
+    .send-button {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.3;
+        text-align: center;
+        color: #fbfbfb;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        gap: 10px;
+        border-radius: 16px;
+        padding: 17px 63px;
+        width: 160px;
+        height: 52px;
+        background-color: #3350e9;
+        cursor: pointer;
+        border: none;
+    }
+
+    .send-button:hover,
+    .send-button:focus {
+        background-color: #1f3cd4;
     }
 }
 
